--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://kit.fontawesome.com/cb5095bf42.js" crossorigin="anonymous"></script>
 </head>
 <body class="w-full h-[500px] bgstyle">
-    <div class="w-[50%] h-[310px] bg-teal-800 rounded-[10px] m-auto mt-[180px] bxsh">
+    <div class="w-[50%] h-[310px] bgform rounded-[10px] m-auto mt-[180px] bxsh">
         <div class="w-[80%] h-[50px] fontstyletitr m-auto text-center">اطلاعات ورودی</div>
         <div class="w-[90%] h-[1px] bgbr m-auto"></div>
 
@@ -32,43 +32,41 @@
                 <input type="text" name="name" id="name" class="fontstyleinput text-right" placeholder="نام خود را وارد کنید ">
 
                 <label for="" class="fontstylelable mr-[18px] mt-[10px]">شماره موبایل</label>
-                <input type="number" name="name" id="name" class="fontstyleinput text-right" placeholder="شماره خور را وارد کنید">
+                <input type="number" name="name" id="name" class="fontstyleinput text-right" placeholder="شماره خود را وارد کنید">
 
-                <a href="index2.html" type="submit" name="submit" id="submit">NEXT STEP</a>
+                <a href="index2.html" type="submit" name="submit" id="submitfirst">مرحله بعد</a>
             </form>
+
         </div>
     </div>
 
-    <div class="w-[50%] h-[50px] m-auto items-center flex pr-[5px] pl-[5px] bg-teal-800 rounded-[10px] mt-[5px] bxsh">
+    <div class="w-[50%] h-[50px] m-auto items-center flex pr-[5px] pl-[5px] rounded-[10px] mt-[5px] bxsh bgform">
         <ol class="flex items-center w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400 sm:text-base">
-            <li class="flex md:w-full items-center text-blue-600 dark:text-blue-500 sm:after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
+            <li class="flex md:w-full items-center text-emerald-800 sm:after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
                 <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
                     <svg class="w-3.5 h-3.5 sm:w-4 sm:h-4 mr-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                         <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
                     </svg>
-                    Personal <span class="hidden sm:inline-flex sm:ml-2">Info</span>
+                    <span>ورود</span>
                 </span>
             </li>
             <li class="flex md:w-full items-center after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
                 <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
                     <span class="mr-2">2</span>
-                    Account <span class="hidden sm:inline-flex sm:ml-2">Info</span>
+                    <span>بیزینس</span>
                 </span>
             </li>
             <li class="flex md:w-full items-center after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
                 <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
                     <span class="mr-2">3</span>
-                    Information
+                    <span>شرکت</span>
                 </span>
             </li>
             <li class="flex items-center">
                 <span class="mr-2">3</span>
-                Confirmation
+                <span>طرح</span>
             </li>
         </ol>
     </div>
-
-
-    
 </body>
 </html>
