--- a/index4.html
+++ b/index4.html
@@ -22,7 +22,7 @@
     <script src="https://kit.fontawesome.com/cb5095bf42.js" crossorigin="anonymous"></script>
 </head>
 <body class="w-full h-[500px] bgstyle">
-    <div class="w-[50%] h-[405px] bg-teal-800 rounded-[10px] m-auto mt-[140px] bxsh">
+    <div class="w-[50%] h-[405px] bgform rounded-[10px] m-auto mt-[140px] bxsh">
         <div class="w-[80%] h-[50px] fontstyletitr m-auto text-center">اطلاعات وبسایت شما</div>
         <div class="w-[90%] h-[1px] bgbr m-auto"></div>
 
@@ -40,44 +40,42 @@
                 <label for="" class="fontstylelable mr-[18px] mt-[10px]">اگر ایده یا نظری دارید بیان کنید .</label>
                 <input type="text" name="name" id="name" class="fontstyleinput text-right" placeholder="در این قسمت میتوانید ایده ها و نظرات خود را بیان کنید ">
 
-
-
-
-
-
-                <a href="" type="submit" name="submit" id="submit">SUBMIT</a>
-
-
             </form>
+
+
+            <div class="w-[100%] h-[40px] flex mt-[20px]">
+                <div class="w-1/2 h-[40px] relative"><a href="index2.html" type="submit" name="submit" id="back">مرحله قبل</a></div>
+                <div class="w-1/2 h-[40px] pl-[187px]"><a href="" type="submit" name="submit" id="submit">ثبت</a></div>
+            </div>
         </div>
     </div>
 
-    <div class="w-[50%] h-[50px] m-auto items-center flex pr-[5px] pl-[5px] bg-teal-800 rounded-[10px] mt-[5px] bxsh">
+    <div class="w-[50%] h-[50px] m-auto items-center flex pr-[5px] pl-[5px] bgform rounded-[10px] mt-[5px] bxsh">
         <ol class="flex items-center w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400 sm:text-base">
             <li class="flex md:w-full items-center after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
                 <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
                     <span class="mr-2">1</span>
-                    Personal <span class="hidden sm:inline-flex sm:ml-2">Info</span>
+                    <span>ورود</span>
                 </span>
             </li>
             <li class="flex md:w-full items-center after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
                 <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
                     <span class="mr-2">2</span>
-                    Account <span class="hidden sm:inline-flex sm:ml-2">Info</span>
+                    <span>بیزینس</span>
                 </span>
             </li>
             <li class="flex md:w-full items-center after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
                 <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
                     <span class="mr-2">3</span>
-                    Information
+                    <span>شرکت</span>
                 </span>
             </li>
-            <li class="flex items-center text-blue-600">
+            <li class="flex items-center text-emerald-800">
                 <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
                     <svg class="w-3.5 h-3.5 sm:w-4 sm:h-4 mr-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                         <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
                     </svg>
-                    Confirmation
+                    <span>طرح</span>
                 </span>
             </li>
             
