--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script src="https://kit.fontawesome.com/cb5095bf42.js" crossorigin="anonymous"></script>
 </head>
 <body class="w-full h-[500px] bgstyle">
-    <div class="w-[50%] h-[310px] bgform rounded-[10px] m-auto mt-[180px] bxsh">
-        <div class="w-[80%] h-[50px] fontstyletitr m-auto text-center">اطلاعات ورودی</div>
+    <div class="w-[50%] h-[310px] bgform rounded-[10px] m-auto mt-[180px] bxsh max-sm:w-[80%] max-sm:mt-[160px]">
+        <div class="w-[80%] h-[50px] fontstyletitr m-auto text-center max-sm:text-[25px]">اطلاعات ورودی</div>
         <div class="w-[90%] h-[1px] bgbr m-auto"></div>
 
         <div class="w-[80%] h-[250px] m-auto">
@@ -34,13 +34,16 @@
                 <label for="" class="fontstylelable mr-[18px] mt-[10px]">شماره موبایل</label>
                 <input type="number" name="name" id="name" class="fontstyleinput text-right" placeholder="شماره خود را وارد کنید">
 
-                <a href="index2.html" type="submit" name="submit" id="submitfirst">مرحله بعد</a>
+                
             </form>
+            <div class="w-full h-[40px] mt-[20px] items-center flex justify-center max-sm:w-full">
+                <a href="index2.html" type="submit" name="submit" id="submitfirst">مرحله بعد</a>
+            </div>
 
         </div>
     </div>
 
-    <div class="w-[50%] h-[50px] m-auto items-center flex pr-[5px] pl-[5px] rounded-[10px] mt-[5px] bxsh bgform">
+    <div class="w-[50%] h-[50px] m-auto items-center flex pr-[5px] pl-[5px] rounded-[10px] mt-[5px] bxsh bgform max-sm:w-[80%] max-sm:pl-[60px]">
         <ol class="flex items-center w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400 sm:text-base">
             <li class="flex md:w-full items-center text-emerald-800 sm:after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
                 <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
