--- a/index4.html
+++ b/index4.html
@@ -22,7 +22,7 @@
     <script src="https://kit.fontawesome.com/cb5095bf42.js" crossorigin="anonymous"></script>
 </head>
 <body class="w-full h-[500px] bgstyle">
-    <div class="w-[50%] h-[405px] bgform rounded-[10px] m-auto mt-[140px] bxsh">
+    <div class="w-[50%] h-[405px] bgform rounded-[10px] m-auto mt-[140px] bxsh max-sm:w-[80%] max-sm:h-[435px] max-sm:mt-[100px]">
         <div class="w-[80%] h-[50px] fontstyletitr m-auto text-center">اطلاعات وبسایت شما</div>
         <div class="w-[90%] h-[1px] bgbr m-auto"></div>
 
@@ -45,12 +45,12 @@
 
             <div class="w-[100%] h-[40px] flex mt-[20px]">
                 <div class="w-1/2 h-[40px] relative"><a href="index3.html" type="submit" name="submit" id="back">مرحله قبل</a></div>
-                <div class="w-1/2 h-[40px] pl-[187px]"><a href="" type="submit" name="submit" id="submit">ثبت</a></div>
+                <div class="w-1/2 h-[40px] flex"><a href="" type="submit" name="submit" id="submit">ثبت</a></div>
             </div>
         </div>
     </div>
 
-    <div class="w-[50%] h-[50px] m-auto items-center flex pr-[5px] pl-[5px] bgform rounded-[10px] mt-[5px] bxsh">
+    <div class="w-[50%] h-[50px] m-auto items-center flex pr-[5px] pl-[5px] bgform rounded-[10px] mt-[5px] bxsh max-sm:w-[80%] max-sm:pl-[60px]">
         <ol class="flex items-center w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400 sm:text-base">
             <li class="flex md:w-full items-center after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
                 <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
