--- a/index.html
+++ b/index.html
@@ -140,36 +140,36 @@
       <!-- One "tab" for each step in the form: -->
       <div class="tab">
         <p><label class="fontstylelable mt-[10px]" for="">نام و نام خانوادگی :</label></p>
-        <p><input placeholder="نام خود را کامل وارد کنید" oninput="this.className = ''" class="pr-[10px]" name="name"></p>
+        <p><input placeholder="نام خود را کامل وارد کنید"  class="pr-[10px]" name="name"></p>
         <p><label class="fontstylelable mt-[10px]" for="">شماره تلفن :</label></p>
-        <p><input placeholder="شماره خود را وارد کنید" type="number" class="pr-[10px]" oninput="this.className = ''" name="phone"></p>
+        <p><input placeholder="شماره خود را وارد کنید" type="number" class="pr-[10px]"  name="phone"></p>
       </div>
       <div class="tab">
         <p><label class="fontstylelable mt-[10px]" for="">نام سایت</label></p>
-        <p><input class="pr-[10px]" placeholder="نام سایت خود را وارد کنید" oninput="this.className = ''" name="text"></p>
+        <p><input class="pr-[10px]" placeholder="نام سایت خود را وارد کنید"  name="text"></p>
         <p><label class="fontstylelable mt-[10px]" for="">URL</label></p>
-        <p><input class="pr-[10px]" placeholder="نام سایت خود را وارد کنید" oninput="this.className = ''" name="text"></p>
+        <p><input class="pr-[10px]" placeholder="نام سایت خود را وارد کنید"  name="text"></p>
         <p><label class="fontstylelable mt-[10px]" for="">اطلاعات مربوط به بیزنس،شرکت،کمپانی</label></p>
-        <p><input class="pr-[10px]" placeholder="در این قسمت باید توضیح دهید در چه حوزه هایی فعالیت دارید و هدف شما از ایجاد این سایت چیست و چه انتظاری از ما دارید" oninput="this.className = ''" name="text"></p>
+        <p><input class="pr-[10px]" placeholder="در این قسمت باید توضیح دهید در چه حوزه هایی فعالیت دارید و هدف شما از ایجاد این سایت چیست و چه انتظاری از ما دارید"  name="text"></p>
       </div>
       <div class="tab">
         <p><label class="fontstylelable mt-[10px]" for="">  usp شما چیست؟ (پیشنهاد فروش منحصر به فرد)</label></p>
-        <p><input class="pr-[10px]" placeholder="چه ویژگی های سایت شما دارد که شمارا از بقیه رقبا متفاوت میکند " oninput="this.className = ''" name="text"></p>
+        <p><input class="pr-[10px]" placeholder="چه ویژگی های سایت شما دارد که شمارا از بقیه رقبا متفاوت میکند "  name="text"></p>
         <p><label class="fontstylelable mt-[10px]" for="">مخاطب هدف شما چه کسانی هستند ؟ </label></p>
         <p><input class="pr-[10px]" placeholder="محدوده سنی مخاطبان شما چیست ؟ 
-            جنسیت مخاطب شما چیست ؟ " oninput="this.className = ''" name="text"></p>
+            جنسیت مخاطب شما چیست ؟ "  name="text"></p>
         <p><label class="fontstylelable mt-[10px]" for="">آیا این یک طراحی مجدد وب سایت است یا سایت از صفر طراحی میشود ؟</label></p>
-        <p><input class="pr-[10px]" placeholder="آیا میخواهید سایت شما باز طراحی شود  یا از ابتدا طراحی شود " oninput="this.className = ''" name="text"></p>
+        <p><input class="pr-[10px]" placeholder="آیا میخواهید سایت شما باز طراحی شود  یا از ابتدا طراحی شود "  name="text"></p>
         <p><label class="fontstylelable mt-[10px]" for="">سایت هایی که دوست دارید یا در حوزه شما فعالیت دارند را معرفی کنید ؟</label></p>
-        <p><input class="pr-[10px]" placeholder="مثال : digikala.com" oninput="this.className = ''" name="text"></p>
+        <p><input class="pr-[10px]" placeholder="مثال : digikala.com"  name="text"></p>
       </div>
       <div class="tab">
         <p><label class="fontstylelable mt-[10px]" for=""> تم رنگی مورد نظر خود را بیان کنید . </label></p>
-        <p><input class="pr-[10px]" placeholder="بهتر است این قسمت را به تیم ما بسپارید" oninput="this.className = ''" name="text"></p>
+        <p><input class="pr-[10px]" placeholder="بهتر است این قسمت را به تیم ما بسپارید"  name="text"></p>
         <p><label class="fontstylelable mt-[10px]" for="">تایپوگرافی / تنظیمات فونت مورد نظر خود را بیان کنید .  </label></p>
-        <p><input class="pr-[10px]" placeholder="بهتر است این قسمت را به تیم ما بسپارید" oninput="this.className = ''" name="text"></p>
+        <p><input class="pr-[10px]" placeholder="بهتر است این قسمت را به تیم ما بسپارید"  name="text"></p>
         <p><label class="fontstylelable mt-[10px]" for="">اگر ایده یا نظری دارید بیان کنید .</label></p>
-        <p><input class="pr-[10px]" placeholder="در این قسمت میتوانید ایده ها و نظرات خود را بیان کنید " oninput="this.className = ''" name="text"></p>
+        <p><input class="pr-[10px]" placeholder="در این قسمت میتوانید ایده ها و نظرات خود را بیان کنید "  name="text"></p>
       </div>
       <div style="overflow:auto;">
         <div style="float:right;">
